--- a/_assets/scss/_forms.scss
+++ b/_assets/scss/_forms.scss
@@ -1,24 +1,27 @@
-form input:not([type="submit"]),
-form textarea {
-    background: #FFFFFF;
-    padding: 1.1em 1.4em;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    outline: none;
-}
+form {
 
-form input:not([type="submit"]):focus,
-form textarea:focus,
-form input:not([type="submit"]):hover,
-form textarea:hover {
-    border-color: var(--color-red-main);
-}
+    & input:not([type="submit"]),
+    & textarea {
+        background: #FFFFFF;
+        padding: 1.1em 1.4em;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        outline: none;
+    }
 
-form input {
-    border-radius: 4em;
-}
+    & input:not([type="submit"]):focus,
+    & textarea:focus,
+    & input:not([type="submit"]):hover,
+    & textarea:hover {
+        border-color: var(--color-red-main);
+    }
 
-form textarea {
-    resize: none;
-    border-radius: 2em;
-    height: 10em;
+    & input {
+        border-radius: 4em;
+    }
+
+    & textarea {
+        resize: none;
+        border-radius: 2em;
+        height: 10em;
+    }
 }
