--- a/_assets/scss/_home.scss
+++ b/_assets/scss/_home.scss
@@ -5,253 +5,245 @@
     width: 100%;
     position: relative;
     overflow-x: hidden;
-}
 
-.clouds img {
-    position: absolute;
-    bottom: 0;
-    left: -30em;
-    right: 0;
-    z-index: 1;
-    width: 150%;
-    max-height: 100vh;
-    animation: slideInMain 5s linear infinite;
-    animation-fill-mode: both;
-}
+    & .clouds img,
+    & .fog img,
+    & .wing img {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
 
-.fog img {
-    position: absolute;
-    bottom: 0;
-    left: -30em;
-    right: 0;
-    z-index: 2;
-    width: 150%;
-    max-height: 100vh;
-    animation: slideInMain 5s linear infinite;
-    animation-fill-mode: both;
-}
+    & .clouds img,
+    & .fog img {
+        left: -30em;
+        width: 150%;
+        max-height: 100vh;
+        animation: slideInMain 5s linear infinite;
+        animation-fill-mode: both;
+    }
 
-.wing img {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 4;
-    max-width: 100%;
-    max-height: 100vh;
+    & .clouds img {
+        z-index: 1;
+    }
+
+    & .fog img {
+        z-index: 2;
+    }
+
+    & .wing img {
+        left: 0;
+        z-index: 4;
+        max-width: 100%;
+        max-height: 100vh;
+    }
 }
 
 // Popular Destinations
 .popular-destinations {
     padding: var(--spacing-layout-elements) 0;
     background: #F6F4EF;
-}
 
-.popular-destinations .flight-wrapper {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: var(--spacing-layout-elements);
-}
+    & .flight-wrapper {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: var(--spacing-layout-elements);
 
-.flight-card {
-    border-radius: 0.5em;
-    border: 1px solid var(--color-beige-main);
-    overflow: hidden;
-}
+        & .flight-card {
+            border-radius: 0.5em;
+            border: 1px solid var(--color-beige-main);
+            overflow: hidden;
 
-.flight-card header {
-    background: var(--color-body-background);
-    color: #000000;
-    border-bottom: 1px solid var(--color-beige-main);
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    align-items: center;
-    padding: 1.5em 2em;
-}
+            & header {
+                background: var(--color-body-background);
+                color: #000000;
+                border-bottom: 1px solid var(--color-beige-main);
+                display: grid;
+                grid-template-columns: repeat(5, 1fr);
+                align-items: center;
+                padding: 1.5em 2em;
 
-.flight-card header h5 {
-    margin-bottom: 0;
-    grid-column: span 2;
-}
+                & h5 {
+                    margin-bottom: 0;
+                    grid-column: span 2;
 
-.flight-card header h5.from {
-    text-align: left;
-}
+                    &.from {
+                        text-align: left;
+                    }
 
-.flight-card header h5.to {
-    text-align: right;
-}
+                    &.to {
+                        text-align: right;
+                    }
+                }
 
-.flight-card header span i {
-    color: var(--color-red-main);
-}
+                & span i {
+                    color: var(--color-red-main);
+                }
+            }
 
-.flight-description {
-    background: var(--color-body-background);
-    padding: 1em 2em;
-}
+            & .flight-description {
+                background: var(--color-body-background);
+                padding: 1em 2em;
 
-.flight-description li {
-    list-style: none outside;
-    margin-bottom: 0.5em;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    align-items: center;
-}
+                & li {
+                    list-style: none outside;
+                    margin-bottom: 0.5em;
+                    display: grid;
+                    grid-template-columns: repeat(5, 1fr);
+                    align-items: center;
 
-.flight-description li > span:first-child {
-    text-align: left;
-    grid-column: span 2;
-}
+                    & > span:first-child {
+                        text-align: left;
+                        grid-column: span 2;
+                    }
 
-.flight-description li > span:last-child {
-    text-align: right;
-    grid-column: span 2;
-}
+                    & .line {
+                        display: inline-block;
+                        width: 100%;
+                        height: 2px;
+                        background: var(--color-red-main);
+                        margin: 0 auto;
+                    }
 
-.flight-description .line {
-    display: inline-block;
-    width: 100%;
-    height: 2px;
-    background: var(--color-red-main);
-    margin: 0 auto;
-}
+                    & > span:last-child {
+                        text-align: right;
+                        grid-column: span 2;
+                    }
+                }
+            }
 
-.book-now {
-    padding: 1.5em 2em;
-    width: 100%;
-    background: var(--color-body-background);
-    border-top: 1px solid var(--color-beige-main);
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-}
+            & .book-now {
+                padding: 1.5em 2em;
+                width: 100%;
+                background: var(--color-body-background);
+                border-top: 1px solid var(--color-beige-main);
+                cursor: pointer;
 
-.book-now:hover {
-    background: var(--color-beige-main);
-}
+                &:hover {
+                    background: var(--color-beige-main);
 
-.book-now:hover a {
-    color: #000000;
-}
+                    & a {
+                        color: #000000;
+                    }
+                }
 
-.book-now a {
-    color: var(--color-red-main);
+                & a {
+                    color: var(--color-red-main);
+                }
+            }
+        }
+    }
 }
 
 // Newsletter
 .newsletter {
     background: var(--color-red-main);
     color: var(--color-body-background);
-}
 
-.newsletter .content-wrapper {
-    padding: var(--spacing-layout-elements) 0;
-    display: flex;
-    align-items: center;
-}
+    & .content-wrapper {
+        padding: var(--spacing-layout-elements) 0;
+        display: flex;
+        align-items: center;
 
-.newsletter h3 {
-    margin-bottom: 0;
-}
+        & h3 {
+            margin-bottom: 0;
+        }
 
-.newsletter form {
-    margin-left: auto;
-}
+        & form {
+            margin-left: auto;
 
-.newsletter form input[type="submit"] {
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    color: var(--color-body-background);
-}
+            & input[type="submit"] {
+                font-family: 'Font Awesome 5 Free';
+                font-weight: 900;
+                color: var(--color-body-background);
 
-.newsletter form input[type="submit"]:hover {
-    transform: translate(1em, -1em);
-    color: var(--color-body-background);
-    background: var(--color-beige-main);
-    border-color: var(--color-beige-main);
+                &:hover {
+                    transform: translate(1em, -1em);
+                    color: var(--color-body-background);
+                    background: var(--color-beige-main);
+                    border-color: var(--color-beige-main);
+                }
+            }
+        }
+    }
 }
 
 // Frequently Asked Questions
 .faq {
     padding: var(--spacing-layout-elements) 0;
-}
 
-.questions-list {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: var(--spacing-layout-elements);
-    padding-bottom: 0;
-}
+    & .questions-list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: var(--spacing-layout-elements);
+        padding-bottom: 0;
 
-.questions-wrapper {
-    list-style: none outside;
-    background: #F6F4EF;
-    border-radius: 0.5em;
-    padding: 1.5em 2em;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-}
+        & .question-and-answer {
+            list-style: none outside;
+            background: #F6F4EF;
+            border-radius: 0.5em;
+            padding: 1.5em 2em;
+            cursor: pointer;
 
-.questions-wrapper:hover {
-    background: var(--color-red-main);
-    color: var(--color-body-background);
-}
+            & .question-wrapper {
+                display: flex;
+                align-items: center;
+                pointer-events: none;
+                padding-bottom: 0;
 
-.questions-wrapper:hover i {
-    color: var(--color-beige-main);
-}
+                & .question {
+                    margin-bottom: 0;
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
 
-.questions-wrapper.active .answer {
-    display: block;
-}
+                    &:after {
+                        display: inline-block;
+                        content: '\f067';
+                        font-family: 'Font Awesome 5 Free';
+                        font-weight: 900;
+                        color: var(--color-red-main);
+                        margin-left: auto;
+                    }
+                }
+            }
 
-.questions-wrapper.active i.open {
-    display: none;
-}
+            &:hover {
+                background: var(--color-red-main);
+                color: var(--color-body-background);
 
-.questions-wrapper.active i.close {
-    display: block;
-}
+                & .question:after {
+                    color: var(--color-beige-main);
+                }
+            }
 
-.question-and-icons {
-    display: flex;
-    align-items: center;
-    pointer-events: none;
-}
+            &.active .question:after {
+                content: '\f068';
+            }
 
-.question-and-icons {
-    padding-bottom: 0;
-}
+            &.active .answer {
+                display: block;
+            }
 
-.question-and-icons .question {
-    margin-bottom: 0;
-}
-
-.question-and-icons i {
-    margin-left: auto;
-    color: var(--color-red-main);
-}
-
-.question-and-icons i.close {
-    display: none;
-}
-
-.answer {
-    display: none;
-    padding-top: 1.5em;
-    padding-bottom: 0;
-    pointer-events: none;
+            & .answer {
+                display: none;
+                padding-top: 1.5em;
+                padding-bottom: 0;
+                pointer-events: none;
+            }
+        }
+    }
 }
 
 // Read More
 .read-more {
     margin-top: var(--spacing-layout-elements);
-}
 
-button {
-    font-size: 1.1em;
-}
+    & button {
+        font-size: 1.1em;
 
-button i {
-    margin-left: 0.5em;
+        & i {
+            margin-left: 0.5em;
+        }
+    }
 }
