--- a/_assets/scss/_layout.scss
+++ b/_assets/scss/_layout.scss
@@ -1,21 +1,20 @@
 .site {
     max-width: var(--layout-main-width);
-}
 
-.site.black-background:after {
-    display: block;
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.8);
-    z-index: 1000;
-}
+    &.black-background:after {
+        display: block;
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.8);
+        z-index: 1000;
+    }
 
-
-.content-wrapper {
-    max-width: var(--layout-content-width);
-    margin: 0 auto;
+    & .content-wrapper {
+        max-width: var(--layout-content-width);
+        margin: 0 auto;
+    }
 }
