--- a/_assets/scss/_typography.scss
+++ b/_assets/scss/_typography.scss
@@ -72,24 +72,6 @@ a {
     color: var(--color-beige-main, #000000);
 }
 
-p, blockquote, ul, ol {
+p, ul, ol {
     padding-bottom: 1.5em;
-}
-
-blockquote {
-    border-left: 2px solid #CCCCCC;
-    padding-left: 2em;
-    font-style: italic;
-    opacity: 0.8;
-}
-
-blockquote p:last-child {
-    padding-bottom: 0;
-    text-align: right;
-}
-
-.cleaner:after {
-    display: block;
-    content: '';
-    clear: both;
 }
