--- a/_assets/scss/site.scss
+++ b/_assets/scss/site.scss
@@ -1,22 +1,22 @@
-@import "_variables.scss";
-@import "_typography.scss";
+@import "variables";
+@import "typography";
 
-@import "_buttons.scss";
+@import "buttons";
+@import "forms";
 
-@import "_layout.scss";
-@import "_header.scss";
-@import "_navigation.scss";
-@import "_footer.scss";
+@import "layout";
+@import "header";
+@import "navigation";
+@import "footer";
 
-@import "_home.scss";
-@import "_about-us.scss";
-@import "_forms.scss";
-@import "_contact-us.scss";
-@import "_profile.scss";
-@import "_our-fleet.scss";
-@import "_destinations.scss";
+@import "home";
+@import "about-us";
+@import "contact-us";
+@import "our-fleet";
+@import "destinations";
 
-@import "_go-top.scss";
+@import "profile";
+@import "go-top";
 
-@import "_animations.scss";
-@import "_transitions.scss";
+@import "animations";
+@import "transitions";
