--- a/_assets/scss/_transitions.scss
+++ b/_assets/scss/_transitions.scss
@@ -10,7 +10,7 @@ input[type="submit"] {
     transition: all 0.5s ease-in-out;
 }
 
-.services-info ul li {
+.service {
     transition: all 0.3s ease-in-out;
 }
 
