--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -13,17 +13,21 @@
 
     <div class="site">
 
+        <input type="checkbox" id="hamburger-menu"  class="hamburger-menu-input">
         <header class="site-header {% if page.home == true %} home-page {% endif %}">
-
             <h1 class="site-title">
                 <a href="{{ site.baseurl }}/">{{site.title}}</a>
             </h1>
 
             {% include navigation.html %}
 
-            <a href="#" class="user-button"><i class="far fa-user"></i></a>
-            <a href="#" class="hamburger-menu"><i class="fas fa-bars"></i></a>
-
+            <div class="header-buttons">
+                <a href="#" class="user-button"><i class="far fa-user"></i></a>
+                <label for="hamburger-menu" class="hamburger-menu-button">
+                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-times"></i>
+                </label>
+            </div>
         </header>
 
         <main class="site-main">
