--- a/_assets/scss/_header.scss
+++ b/_assets/scss/_header.scss
@@ -3,11 +3,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5em 5em;
+    padding: 0.5em 10em;
     margin-bottom: 1.5em;
 
-    @include bp(desktop-large) {
-        padding: 0.5em 10em;
+    @include bp(desktop) {
+        padding: 0.5em 5em;
     }
 
     &.fixed {
@@ -15,7 +15,7 @@
         top: 0;
         width: 100%;
         z-index: 100;
-        box-shadow: 0 0 0.3em 0 var(--color-beige-main);
+        box-shadow: 0 0 0.1em 0.1em var(--color-beige-main);
     }
 
     &.home-page {
