--- a/_assets/scss/_home.scss
+++ b/_assets/scss/_home.scss
@@ -49,6 +49,18 @@
         grid-template-columns: repeat(4, 1fr);
         grid-gap: var(--spacing-layout-elements);
 
+        @include bp(desktop) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+
+        @include bp(tablet) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @include bp(phone) {
+            grid-template-columns: 1fr;
+        }
+
         & .flight-card {
             border-radius: 0.5em;
             border: 1px solid var(--color-beige-main);
@@ -145,12 +157,25 @@
         display: flex;
         align-items: center;
 
+        @include bp(tablet) {
+            padding: var(--spacing-layout-elements) 2em;
+            flex-direction: column;
+        }
+
         & h3 {
             margin-bottom: 0;
+
+            @include bp(tablet) {
+                margin-bottom: 1em;
+            }
         }
 
         & form {
             margin-left: auto;
+
+            @include bp(tablet) {
+                margin-left: 0;
+            }
 
             & input[type="submit"] {
                 font-family: 'Font Awesome 5 Free';
@@ -177,6 +202,10 @@
         grid-template-columns: repeat(2, 1fr);
         grid-gap: var(--spacing-layout-elements);
         padding-bottom: 0;
+
+        @include bp(tablet) {
+            grid-template-columns: 1fr;
+        }
 
         & .question-and-answer {
             list-style: none outside;
