--- a/_assets/scss/_layout.scss
+++ b/_assets/scss/_layout.scss
@@ -16,5 +16,10 @@
     & .content-wrapper {
         max-width: var(--layout-content-width);
         margin: 0 auto;
+
+        @include bp(tablet) {
+            max-width: 100%;
+            padding: 0 2em;
+        }
     }
 }
