--- a/_assets/scss/_mixins.scss
+++ b/_assets/scss/_mixins.scss
@@ -7,7 +7,7 @@
     }
 
     @else if $point == desktop {
-        @media (min-width: 1024px) {
+        @media (min-width: 1024px) and (max-width: 1599px){
             @content;
         }
     }
