--- a/_assets/scss/_about-us.scss
+++ b/_assets/scss/_about-us.scss
@@ -12,6 +12,15 @@
         grid-template-columns: repeat(2, 1fr);
         grid-gap: var(--spacing-layout-elements);
 
+        @include bp(tablet) {
+            grid-template-rows: repeat(2, 1fr);
+        }
+
+        @include bp(phone) {
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(7, 1fr);
+        }
+
         & .media,
         & .service {
             border-radius: 0.5em;
@@ -19,6 +28,14 @@
 
         & .media {
             overflow: hidden;
+
+            @include bp(tablet) {
+                grid-column: 1 / -1;
+            }
+
+            @include bp(phone) {
+                grid-row: 1;
+            }
 
             & img {
                 width: 100%;
@@ -33,6 +50,17 @@
             grid-gap: var(--spacing-layout-elements);
             padding-bottom: 0;
 
+            @include bp(tablet) {
+                grid-column: 1 / -1;
+                grid-row: 2;
+            }
+
+            @include bp(phone) {
+                grid-row: 2 / -1;
+                grid-template-columns: 1fr;
+                grid-template-rows: repeat(6, 1fr);
+            }
+
             & .service {
                 list-style: none outside;
                 background: var(--color-body-background);
@@ -42,6 +70,7 @@
                 flex-direction: column;
                 justify-content: center;
                 cursor: pointer;
+                padding: 1em;
 
                 &:nth-of-type(2) .service-name:before {
                     content: '\f5af';
@@ -99,6 +128,14 @@
         grid-template-columns: repeat(4, 1fr);
         grid-gap: 3em;
 
+        @include bp(tablet) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+
+        @include bp(phone) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
         & .worker {
             grid-column: span 1;
             position: relative;
@@ -141,6 +178,14 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: var(--spacing-layout-elements);
+
+        @include bp(tablet) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @include bp(phone) {
+            grid-template-columns: 1fr;
+        }
 
         & .testimonials-card {
             border: 1px solid var(--color-red-main);
