--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -141,7 +141,7 @@ form textarea {
   justify-content: space-between;
   align-items: center;
   padding: 0.5em 10em;
-  margin-bottom: 1.5em; }
+  margin-bottom: 0; }
   @media (min-width: 1024px) and (max-width: 1799px) {
     .site-header {
       padding: 0.5em 5em; } }
@@ -151,8 +151,6 @@ form textarea {
     width: 100%;
     z-index: 100;
     box-shadow: 0 0 0.1em 0.1em var(--color-beige-main); }
-  .site-header.home-page {
-    margin-bottom: 0; }
   .site-header .site-title {
     margin-bottom: 0;
     text-align: left; }
@@ -680,6 +678,9 @@ form textarea {
       .contact-us .content-wrapper form textarea {
         grid-column: span 4; }
 
+.our-fleet {
+  padding: var(--spacing-layout-elements) 0; }
+
 .fleet-card {
   display: flex;
   justify-content: center;
@@ -750,6 +751,12 @@ form textarea {
   justify-content: center;
   padding: var(--spacing-layout-elements) 0;
   margin: 0; }
+  @media (max-width: 1023px) {
+    .destinations {
+      grid-template-columns: repeat(2, 1fr); } }
+  @media (max-width: 650px) {
+    .destinations {
+      grid-template-columns: 1fr; } }
   .destinations li {
     list-style: none outside;
     overflow: hidden;
@@ -791,6 +798,70 @@ form textarea {
       display: block;
       content: '';
       padding-top: 56.25%; }
+    @media (max-width: 1023px) {
+      .destinations li:nth-of-type(1) {
+        -webkit-animation-delay: 0.1s;
+                animation-delay: 0.1s; }
+      .destinations li:nth-of-type(2) {
+        -webkit-animation-delay: 0.2s;
+                animation-delay: 0.2s; }
+      .destinations li:nth-of-type(3) {
+        -webkit-animation-delay: 0.3s;
+                animation-delay: 0.3s; }
+      .destinations li:nth-of-type(4) {
+        -webkit-animation-delay: 0.4s;
+                animation-delay: 0.4s; }
+      .destinations li:nth-of-type(5) {
+        -webkit-animation-delay: 0.5s;
+                animation-delay: 0.5s; }
+      .destinations li:nth-of-type(6) {
+        -webkit-animation-delay: 0.6s;
+                animation-delay: 0.6s; }
+      .destinations li:nth-of-type(7) {
+        -webkit-animation-delay: 0.7s;
+                animation-delay: 0.7s; }
+      .destinations li:nth-of-type(8) {
+        -webkit-animation-delay: 0.8s;
+                animation-delay: 0.8s; }
+      .destinations li:nth-of-type(9) {
+        -webkit-animation-delay: 0.9s;
+                animation-delay: 0.9s; }
+      .destinations li:nth-of-type(10) {
+        -webkit-animation-delay: 1s;
+                animation-delay: 1s; }
+      .destinations li:nth-of-type(11) {
+        -webkit-animation-delay: 1.1s;
+                animation-delay: 1.1s; }
+      .destinations li:nth-of-type(12) {
+        -webkit-animation-delay: 1.2s;
+                animation-delay: 1.2s; }
+      .destinations li:nth-of-type(13) {
+        -webkit-animation-delay: 1.3s;
+                animation-delay: 1.3s; }
+      .destinations li:nth-of-type(14) {
+        -webkit-animation-delay: 1.4s;
+                animation-delay: 1.4s; }
+      .destinations li:nth-of-type(15) {
+        -webkit-animation-delay: 1.5s;
+                animation-delay: 1.5s; }
+      .destinations li:nth-of-type(16) {
+        -webkit-animation-delay: 1.6s;
+                animation-delay: 1.6s; }
+      .destinations li:nth-of-type(17) {
+        -webkit-animation-delay: 1.7s;
+                animation-delay: 1.7s; }
+      .destinations li:nth-of-type(18) {
+        -webkit-animation-delay: 1.8s;
+                animation-delay: 1.8s; }
+      .destinations li:nth-of-type(19) {
+        -webkit-animation-delay: 1.9s;
+                animation-delay: 1.9s; }
+      .destinations li:nth-of-type(20) {
+        -webkit-animation-delay: 2s;
+                animation-delay: 2s; }
+      .destinations li:nth-of-type(21) {
+        -webkit-animation-delay: 2.1s;
+                animation-delay: 2.1s; } }
     .destinations li a {
       display: flex;
       justify-content: center;
