--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 
-    <div class="site">
+    <div class="site {% if page.contact-us == true %} contact-us-page {% endif %}">
 
         <input type="checkbox" id="hamburger-menu"  class="hamburger-menu-input">
-        <header class="site-header {% if page.home == true %} home-page {% endif %}">
+        <header class="site-header">
             <h1 class="site-title">
                 <a href="{{ site.baseurl }}/">{{site.title}}</a>
             </h1>
