--- a/_assets/scss/_our-fleet.scss
+++ b/_assets/scss/_our-fleet.scss
@@ -6,14 +6,48 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 4em;
     opacity: 0;
     transform: translateX(-10em);
     animation: slideInHorizontal 0.5s linear;
     animation-fill-mode: forwards;
 
+    &:not(:last-child) {
+        margin-bottom: 4em;
+    }
+
+    @include bp(tablet) {
+        flex-direction: column;
+    }
+
     &.slide-from-right {
         transform: translateX(10em);
+
+        @include bp(tablet) {
+            & .media {
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
+            }
+
+            & .description {
+                border-bottom-left-radius: 0;
+                border-bottom-right-radius: 0;
+            }
+        }
+    }
+
+    &.slide-from-left {
+
+        @include bp(tablet) {
+            & .description {
+                border-top-left-radius: 0;
+                border-top-right-radius: 0;
+            }
+
+            & .media {
+                border-bottom-left-radius: 0;
+                border-bottom-right-radius: 0;
+            }
+        }
     }
 
     @for $i from 2 through 7 {
@@ -32,6 +66,10 @@
         width: 30em;
         position: relative;
         overflow: hidden;
+
+        @include bp(tablet) {
+            width: 100%;
+        }
 
         &:before {
             display: block;
@@ -54,6 +92,10 @@
     & .description {
         width: 25em;
         padding: 2em;
+
+        @include bp(tablet) {
+            width: 100%;
+        }
 
         & .airplane-name {
             color: var(--color-beige-main);
